--- a/plugin.xml
+++ b/plugin.xml
@@ -29,6 +29,7 @@
             <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
             <uses-permission android:name="android.permission.INTERNET" />
             <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+            <uses-permission android:name="android.permission.NEARBY_WIFI_DEVICES" />
         </config-file>
 
         <config-file target="res/xml/config.xml" parent="/*">
